# adios

./: .gitignore  ArgumentParser.cpp  FileIOManager.cpp  HiddenMarkov.cpp  LICENSE  Linalg.cpp  Linalg.hpp  Makefile  Makefile.in  README.md  adios  adios.cpp  adios.hpp  combinatorics.cpp  combinatorics.hpp  common.cpp  common.hpp  config.h.in  configure  configure.ac  datamodel.cpp  datamodel.hpp  dummy_main.cpp  main.cpp  power.cpp  power_main.cpp  setops.cpp  setops.hpp  stringops.cpp  stringops.hpp  test.vcf  utility.cpp  vcf.cpp  vcf.hpp
include/: ArgumentParser.hpp  FileIOManager.hpp  HiddenMarkov.hpp  Linalg.hpp  adios.hpp  combinatorics.hpp  datamodel.hpp  power.hpp  stringops.hpp  utility.hpp  vcf.hpp
m4/: check_autotype.m4
support/: gen_ibd_vcf.py  vcf_frequency_extractor.cpp
unittests/: AllTests.cpp  Makefile  TestAdios.cpp  TestArgumentParser.cpp  TestCombinatorics.cpp  TestDataModel.cpp  TestFileIOManager.cpp  TestHMM.cpp  TestMatrix.cpp  TestSetops.cpp  TestStringops.cpp  TestUtility.cpp  TestVcf.cpp  TestVector.cpp
unittests/data/vcf/: test2.vcf  test_informative_sites.vcf
